@@ -2,11 +2,11 @@
 
 unsigned int byte_chr(s,n,c)
 char *s;
-register unsigned int n;
+unsigned int n;
 int c;
 {
-  register char ch;
-  register char *t;
+  char ch;
+  char *t;
 
   ch = c;
   t = s;
