@@ -1,9 +1,9 @@
 #include "byte.h"
 
 void byte_copy(to,n,from)
-register char *to;
-register unsigned int n;
-register char *from;
+char *to;
+unsigned int n;
+char *from;
 {
   for (;;) {
     if (!n) return; *to++ = *from++; --n;
