@@ -1,9 +1,9 @@
 #include "byte.h"
 
 int byte_diff(s,n,t)
-register char *s;
-register unsigned int n;
-register char *t;
+char *s;
+unsigned int n;
+char *t;
 {
   for (;;) {
     if (!n) return 0; if (*s != *t) break; ++s; ++t; --n;
