@@ -2,7 +2,7 @@
 
 void byte_zero(s,n)
 char *s;
-register unsigned int n;
+unsigned int n;
 {
   for (;;) {
     if (!n) break; *s++ = 0; --n;
