@@ -1,11 +1,11 @@
 #include "case.h"
 
 int case_starts(s,t)
-register char *s;
-register char *t;
+char *s;
+char *t;
 {
-  register unsigned char x;
-  register unsigned char y;
+  unsigned char x;
+  unsigned char y;
 
   for (;;) {
     x = *s++ - 'A';
