@@ -1,9 +1,9 @@
 #include "fmt.h"
 
 unsigned int fmt_str(s,t)
-register char *s; register char *t;
+char *s; char *t;
 {
-  register unsigned int len;
+  unsigned int len;
   char ch;
   len = 0;
   if (s) { while (ch = t[len]) s[len++] = ch; }
