@@ -1,6 +1,6 @@
 #include "fmt.h"
 
-unsigned int fmt_uint(s,u) register char *s; register unsigned int u;
+unsigned int fmt_uint(s,u) char *s; unsigned int u;
 {
-  register unsigned long l; l = u; return fmt_ulong(s,l);
+  unsigned long l; l = u; return fmt_ulong(s,l);
 }
