@@ -2,8 +2,8 @@
 #define GEN_ALLOC_DEFS_H
 
 #define GEN_ALLOC_ready(ta,type,field,len,a,i,n,x,base,ta_ready) \
-int ta_ready(x,n) register ta *x; register unsigned int n; \
-{ register unsigned int i; \
+int ta_ready(x,n) ta *x; unsigned int n; \
+{ unsigned int i; \
   if (x->field) { \
     i = x->a; \
     if (n > i) { \
@@ -15,8 +15,8 @@ int ta_ready(x,n) register ta *x; register unsigned int n; \
   return !!(x->field = (type *) alloc((x->a = n) * sizeof(type))); }
 
 #define GEN_ALLOC_readyplus(ta,type,field,len,a,i,n,x,base,ta_rplus) \
-int ta_rplus(x,n) register ta *x; register unsigned int n; \
-{ register unsigned int i; \
+int ta_rplus(x,n) ta *x; unsigned int n; \
+{ unsigned int i; \
   if (x->field) { \
     i = x->a; n += x->len; \
     if (n > i) { \
@@ -28,7 +28,7 @@ int ta_rplus(x,n) register ta *x; register unsigned int n; \
   return !!(x->field = (type *) alloc((x->a = n) * sizeof(type))); }
 
 #define GEN_ALLOC_append(ta,type,field,len,a,i,n,x,base,ta_rplus,ta_append) \
-int ta_append(x,i) register ta *x; register type *i; \
+int ta_append(x,i) ta *x; type *i; \
 { if (!ta_rplus(x,1)) return 0; x->field[x->len++] = *i; return 1; }
 
 #endif
