@@ -4,8 +4,8 @@
 #include "getln.h"
 
 int getln(ss,sa,match,sep)
-register substdio *ss;
-register stralloc *sa;
+substdio *ss;
+stralloc *sa;
 int *match;
 int sep;
 {
