@@ -4,14 +4,14 @@
 #include "getln.h"
 
 int getln2(ss,sa,cont,clen,sep)
-register substdio *ss;
-register stralloc *sa;
+substdio *ss;
+stralloc *sa;
 /*@out@*/char **cont;
 /*@out@*/unsigned int *clen;
 int sep;
 {
-  register char *x;
-  register unsigned int i;
+  char *x;
+  unsigned int i;
   int n;
  
   if (!stralloc_ready(sa,0)) return -1;
