@@ -1,9 +1,9 @@
 #include "scan.h"
 
-unsigned int scan_ulong(s,u) register char *s; register unsigned long *u;
+unsigned int scan_ulong(s,u) char *s; unsigned long *u;
 {
-  register unsigned int pos; register unsigned long result;
-  register unsigned long c;
+  unsigned int pos; unsigned long result;
+  unsigned long c;
   pos = 0; result = 0;
   while ((c = (unsigned long) (unsigned char) (s[pos] - '0')) < 10)
     { result = result * 10 + c; ++pos; }
