@@ -1,11 +1,11 @@
 #include "str.h"
 
 int str_diffn(s,t,len)
-register char *s;
-register char *t;
+char *s;
+char *t;
 unsigned int len;
 {
-  register char x;
+  char x;
 
   for (;;) {
     if (!len--) return 0; x = *s; if (x != *t) break; if (!x) break; ++s; ++t;
