@@ -1,9 +1,9 @@
 #include "str.h"
 
 unsigned int str_len(s)
-register char *s;
+char *s;
 {
-  register char *t;
+  char *t;
 
   t = s;
   for (;;) {
