@@ -1,12 +1,12 @@
 #include "str.h"
 
 unsigned int str_rchr(s,c)
-register char *s;
+char *s;
 int c;
 {
-  register char ch;
-  register char *t;
-  register char *u;
+  char ch;
+  char *t;
+  char *u;
 
   ch = c;
   t = s;
