@@ -3,12 +3,12 @@
 #include "error.h"
 
 static int oneread(op,fd,buf,len)
-register int (*op)();
-register int fd;
-register char *buf;
-register int len;
+int (*op)();
+int fd;
+char *buf;
+int len;
 {
-  register int r;
+  int r;
 
   for (;;) {
     r = op(fd,buf,len);
@@ -18,12 +18,12 @@ register int len;
 }
 
 static int getthis(s,buf,len)
-register substdio *s;
-register char *buf;
-register int len;
+substdio *s;
+char *buf;
+int len;
 {
-  register int r;
-  register int q;
+  int r;
+  int q;
  
   r = s->p;
   q = r - len;
@@ -34,10 +34,10 @@ register int len;
 }
 
 int substdio_feed(s)
-register substdio *s;
+substdio *s;
 {
-  register int r;
-  register int q;
+  int r;
+  int q;
 
   if (s->p) return s->p;
   q = s->n;
@@ -51,11 +51,11 @@ register substdio *s;
 }
 
 int substdio_bget(s,buf,len)
-register substdio *s;
-register char *buf;
-register int len;
+substdio *s;
+char *buf;
+int len;
 {
-  register int r;
+  int r;
  
   if (s->p > 0) return getthis(s,buf,len);
   r = s->n; if (r <= len) return oneread(s->op,s->fd,buf,r);
@@ -64,11 +64,11 @@ register int len;
 }
 
 int substdio_get(s,buf,len)
-register substdio *s;
-register char *buf;
-register int len;
+substdio *s;
+char *buf;
+int len;
 {
-  register int r;
+  int r;
  
   if (s->p > 0) return getthis(s,buf,len);
   if (s->n <= len) return oneread(s->op,s->fd,buf,len);
@@ -77,14 +77,14 @@ register int len;
 }
 
 char *substdio_peek(s)
-register substdio *s;
+substdio *s;
 {
   return s->x + s->n;
 }
 
 void substdio_seek(s,len)
-register substdio *s;
-register int len;
+substdio *s;
+int len;
 {
   s->n += len;
   s->p -= len;
