@@ -1,11 +1,11 @@
 #include "substdio.h"
 
 void substdio_fdbuf(s,op,fd,buf,len)
-register substdio *s;
-register int (*op)();
-register int fd;
-register char *buf;
-register int len;
+substdio *s;
+int (*op)();
+int fd;
+char *buf;
+int len;
 {
   s->x = buf;
   s->fd = fd;
