@@ -4,12 +4,12 @@
 #include "error.h"
 
 static int allwrite(op,fd,buf,len)
-register int (*op)();
-register int fd;
-register char *buf;
-register int len;
+int (*op)();
+int fd;
+char *buf;
+int len;
 {
-  register int w;
+  int w;
 
   while (len) {
     w = op(fd,buf,len);
@@ -25,9 +25,9 @@ register int len;
 }
 
 int substdio_flush(s)
-register substdio *s;
+substdio *s;
 {
-  register int p;
+  int p;
  
   p = s->p;
   if (!p) return 0;
@@ -36,11 +36,11 @@ register substdio *s;
 }
 
 int substdio_bput(s,buf,len)
-register substdio *s;
-register char *buf;
-register int len;
+substdio *s;
+char *buf;
+int len;
 {
-  register int n;
+  int n;
  
   while (len > (n = s->n - s->p)) {
     byte_copy(s->x + s->p,n,buf); s->p += n; buf += n; len -= n;
@@ -53,11 +53,11 @@ register int len;
 }
 
 int substdio_put(s,buf,len)
-register substdio *s;
-register char *buf;
-register int len;
+substdio *s;
+char *buf;
+int len;
 {
-  register int n;
+  int n;
  
   n = s->n;
   if (len > n - s->p) {
@@ -78,31 +78,31 @@ register int len;
 }
 
 int substdio_putflush(s,buf,len)
-register substdio *s;
-register char *buf;
-register int len;
+substdio *s;
+char *buf;
+int len;
 {
   if (substdio_flush(s) == -1) return -1;
   return allwrite(s->op,s->fd,buf,len);
 }
 
 int substdio_bputs(s,buf)
-register substdio *s;
-register char *buf;
+substdio *s;
+char *buf;
 {
   return substdio_bput(s,buf,str_len(buf));
 }
 
 int substdio_puts(s,buf)
-register substdio *s;
-register char *buf;
+substdio *s;
+char *buf;
 {
   return substdio_put(s,buf,str_len(buf));
 }
 
 int substdio_putsflush(s,buf)
-register substdio *s;
-register char *buf;
+substdio *s;
+char *buf;
 {
   return substdio_putflush(s,buf,str_len(buf));
 }
